Ajustes finais de responsividade e adequação das imagens

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <section class="container">
         <header>
             <img src="images/4cars.png" alt="logo marca da empresa 4cars">
 
@@ -40,7 +40,7 @@
         <main>
             <p>Escolha seu carro e seu plano</p>
         </main>
-        <div class="small-box1">
+        <section class="small-box1">
             <h2>Planos disponíveis:</h2>
             <ul>
                 <li>
@@ -60,8 +60,8 @@
                     <a href="https://www.instagram.com/rahbaeta/" target="_blank">4cars Único</a>
                 </li>
             </ul>
-        </div>
-        <div class="small-box2">
+        </section>
+        <section class="small-box2">
             <h2>
                 Transporte de Luxo:
             </h2>
@@ -73,43 +73,45 @@
                 Quero esse!
                 <a href="https://www.instagram.com/rahbaeta/" target="_blank"></a>
             </h3>
-        </div>
-        <div class="small-box3">
+        </section>
+        <section class="small-box3">
             <h2>
                 Carros Populares:
             </h2>
             <p>
                 Renault Sandero
             </p>
-            <img src="images/sandero5.jpg" alt="imagem do carro sandero cinza">
+            <img class="img-sandero" src="images/sandero5.jpg" alt="imagem do carro sandero cinza">
             <h3>
                 Quero esse!
                 <a href="https://www.instagram.com/rahbaeta/" target="_blank"></a>
             </h3>
-        </div>
+        </section>
         <aside>
             <h4>IMPORTANTE</h4>
             <h5>Evite cair em fraudes!</h5>
             <h5>Nossos únicos meios de comunicação são os canais oficiais abaixo.</h5>
+            <div>
             <a href="https://www.instagram.com/rahbaeta/" target="_blank">
-                <img src="https://assets-global.website-files.com/5d9cbcaaa04de92e607c3696/62f64c5f764027e1ea15cbc8_insta-a.svg"
+                <img class="icone" src="https://assets-global.website-files.com/5d9cbcaaa04de92e607c3696/62f64c5f764027e1ea15cbc8_insta-a.svg"
                     alt="ícone do instagram da cor rosa" width="18px" height="18px">
             </a>
             <a href="https://www.instagram.com/rahbaeta/" target="_blank">
-                <img src="https://assets-global.website-files.com/5d9cbcaaa04de92e607c3696/62f64c5ee221ec1c21cd0cd9_face-a.svg"
+                <img class="icone" src="https://assets-global.website-files.com/5d9cbcaaa04de92e607c3696/62f64c5ee221ec1c21cd0cd9_face-a.svg"
                     alt="ícone do instagram da cor rosa" width="18px" height="18px">
             </a>
 
             <a href="https://www.instagram.com/rahbaeta/" target="_blank">
-                <img src="https://assets-global.website-files.com/5d9cbcaaa04de92e607c3696/62f64c5f791f0aca9c6ab368_twiter-a.svg"
+                <img class="icone" src="https://assets-global.website-files.com/5d9cbcaaa04de92e607c3696/62f64c5f791f0aca9c6ab368_twiter-a.svg"
                     alt="ícone do instagram da cor rosa" width="18px" height="18px">
             </a>
+        </div>
         </aside>
         <footer>
             <p>© 4Cars Tecnologia Ltda.</p>
             <p> Rua Misteriosa, 13 - BA</p>
         </footer>
-    </div>
+    </section>
 </body>
 
 </html>
